--- a/components/WeatherApp/WeatherApp.module.css
+++ b/components/WeatherApp/WeatherApp.module.css
@@ -21,7 +21,7 @@
 @media only screen and (max-width: 800px) {
     .app{
         background-image: url("https://img.freepik.com/premium-photo/leaf-with-water-drops-textured-abstract-blue_72608-1249.jpg?w=360");
-        height:100vh;
+        height:auto;
         background-size: cover;
         margin:0;
     }
